--- a/phone.css
+++ b/phone.css
@@ -1,3 +1,4 @@
+#projects{    display: block !important;}
 body{
     height:100vh;
     width:100vw;
@@ -49,6 +50,3 @@ h2{
     color:#003c48;
 }
 
-#projects{
-display:block !important;
-}
